[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/scripts/Door.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20.5, 119 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Shape:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "close"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Shape:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=5]
resource_name = "open"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Shape:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 209, 132 )

[sub_resource type="RectangleShape2D" id=3]

[node name="Door" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Shape" type="CollisionShape2D" parent="."]
position = Vector2( 0, -119 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/close = SubResource( 4 )
anims/open = SubResource( 5 )

[node name="Sensor" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 5

[node name="Shape" type="CollisionShape2D" parent="Sensor"]
position = Vector2( 0, -119 )
shape = SubResource( 2 )

[node name="Button" type="Area2D" parent="."]
position = Vector2( 239, 0 )
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button"]
position = Vector2( 0, -10 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Button"]

[connection signal="body_entered" from="Sensor" to="." method="_on_Sensor_body_entered"]
[connection signal="body_exited" from="Sensor" to="." method="_on_Sensor_body_exited"]
[connection signal="body_entered" from="Button" to="." method="_on_Button_body_entered"]
